--- a/阿里巴巴代码规范阅读记录.md
+++ b/阿里巴巴代码规范阅读记录.md
@@ -1,10 +1,10 @@
 ### 一.编程规约
 
-#### 命名风格
+#### (一)命名风格
 
->8.【强制】POJO类中布尔类型的变量，都不要加is前缀，否则部分框架解析会引起序列化错误。
->
->反例：定义为基本数据类型Boolean isDeleted的属性，它的方法也是isDeleted()，**RPC框架在反向解析的时候，"误以为"对应的属性名称是deleted**，导致属性获取不到，进而抛出异常。
+		>8.【强制】POJO类中布尔类型的变量，都不要加is前缀，否则部分框架解析会引起序列化错误。
+		>
+		>反例：定义为基本数据类型Boolean isDeleted的属性，它的方法也是isDeleted()，**RPC框架在反向解析的时候，"误以为"对应的属性名称是deleted**，导致属性获取不到，进而抛出异常。	
 
 ```java
 		private boolean isDeleted;
@@ -19,3 +19,11 @@
 ```
 
 这里，我设置了一个属性isDeleted，并用ide的getter&setter生成相应方法，getter方法就是isDeleted()，**以前没有注意到这点可能会导致RPC框架反向解析的时候会导致问题**，这里马克一下。
+
+
+
+#### (三)代码格式
+
+>3.【强制】if/for/while/switch/do等保留字与括号之间都必须加空格
+
+这里以前也没注意到，没有加空格，可能是加空格是想强调下这些保留字吧，同样马克。
