--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -36,7 +36,7 @@
 >
 >说明：包括方法签名、结束右大括号、注释、空行、回车及任何不可见字符的总行数不超过80行。
 >
->正例：代码逻辑愤青红花和绿叶，个性和共性，绿叶逻辑单独出来成为额外方法，使主干代码更加清晰；共性逻辑抽取成为共性方法，便于复用和维护。
+>正例：代码逻辑愤青红花和绿叶，个性和共性，绿叶逻辑单独出来成为额外方法，**使主干代码更加清晰**；**共性逻辑抽取成为共性方法，便于复用和维护**。
 
 这里说的挺好的，该抽取的一定要抽取，冗长的代码真的不容易看出主干。
 
