--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -132,3 +132,21 @@ protected void doDispatch(HttpServletRequest request, HttpServletResponse respon
 	}
 ~~~
 
+
+
+#### (四)OOP 规约
+
+>1.【强制】避免通过一个类的对象引用访问此类的静态变量或静态方法，无谓增加编译器解析成本，直接用类名来访问即可。
+
+这里大家一般不会出错，静态元素的访问肯定是通过类名来调用的；
+
+**TODO 只是这里A.staticField和new A().staticField，这两种调用在编译器或者虚拟机层面是具体怎么回事，有待了解**
+
+
+
+>2.【强制】所有的覆写方法，必须加@Override注解。
+>
+>说明：getOnject()与get0bject()的问题。一个是字母的O，一个是数字的0，加@Override可以准确判断是否覆盖成功。另外，如果在抽象类中对方法签名进行修改，其实现类会马上编译报错。
+
+这里，其实加不加@Override注解
+
