--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -148,5 +148,5 @@ protected void doDispatch(HttpServletRequest request, HttpServletResponse respon
 >
 >说明：getOnject()与get0bject()的问题。一个是字母的O，一个是数字的0，加@Override可以准确判断是否覆盖成功。另外，如果在抽象类中对方法签名进行修改，其实现类会马上编译报错。
 
-这里，其实加不加@Override注解
+这里，其实加不加@Override注解，如果在抽象类中对方法签名进行修改，实现类也会报错，只不过是只会在类名那里报错，而如果加上@Override注解的话，在类名和方法名那里都会编译报错
 
