--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -148,5 +148,13 @@ protected void doDispatch(HttpServletRequest request, HttpServletResponse respon
 >
 >说明：getOnject()与get0bject()的问题。一个是字母的O，一个是数字的0，加@Override可以准确判断是否覆盖成功。另外，如果在抽象类中对方法签名进行修改，其实现类会马上编译报错。
 
-这里，其实加不加@Override注解，如果在抽象类中对方法签名进行修改，实现类也会报错，只不过是只会在类名那里报错，而如果加上@Override注解的话，在类名和方法名那里都会编译报错
+这里，其实加不加@Override注解，如果在抽象类中对方法签名进行修改，实现类也会报错，只不过是只会在类名那里报错，而如果加上@Override注解的话，在类名和方法名那里都会编译报错。
+
+
+
+>4.【强制】外部正在调用或者二方库依赖的接口，不允许修改方法名，避免对接口调用方产生影响。**接口过时必须加@Deprecated注解，并清晰地说明采用的新接口或者新服务是什么**。
+
+这里把过时接口的替代方案说明出来还是很有必要的，另外也可以说明下为啥过时，或者基于什么考虑。
+
+
 
