--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -158,3 +158,32 @@ protected void doDispatch(HttpServletRequest request, HttpServletResponse respon
 
 
 
+>6.【强制】Object的equals方法容易抛空指针异常，应使用常量或确定有值的对象来调用euqals。
+>
+>正例："test".equals(object);
+>
+>反例：object.equals("test");
+>
+>说明：推荐使用java.util.Objects#equals(jdk7引入的工具类)
+
+~~~java
+/**
+ * Returns true if the arguments are equal to each other and false otherwise. 
+ * Consequently,if both arguments are null, 
+ * true is returned and if exactly one argument is null, 
+ * false is returned. Otherwise, 
+ * equality is determined by using the equals method of the first argument.
+ */
+public static boolean equals(Object a, Object b) {
+        return (a == b) || (a != null && a.equals(b));
+    }
+~~~
+
+这里贴了下Java7引入的Objects.equals()的方法，可以看到，**使用这个工具方法的话，就无须对调用这个方法的对象进行非空校验，也不怕报空指针**。
+
+
+
+
+
+
+
