--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -183,6 +183,79 @@ public static boolean equals(Object a, Object b) {
 
 
 
+>7.【强制】所有的相同类型的包装类对象之间值的比较，全部使用equals方法比较。
+>
+>说明：对于integer var = ? 在-128至127范围内的赋值，Integer对象是在IntegerCache.cache产生，会复用已有对象，这个区间内的Integer值可以直接使用==进行判断，但是这个区间之外的所有数据，都会在堆上产生，并不会复用已有对象，这是一个大坑，推荐使用equals方法进行判断。
+
+~~~java
+public static void main(String[] args) {
+        Integer n1 = 123;
+        Integer n2 = 123;
+        Integer n3 = 128;
+        Integer n4 = 128;
+        Integer n5 = new Integer(122);
+        Integer n6 = new Integer(122);
+
+        System.out.println(n1 == n2);//true
+        System.out.println(n3 == n4);//false
+        System.out.println(n5 == n6);//false
+  
+        System.out.println("==================分割线====================");
+
+        Short s1 = 120;
+        Short s2 = 120;
+        Short s3 = 128;
+        Short s4 = 128;
+        Short s5 = new Short((short)110);
+        Short s6 = new Short((short)110);
+        System.out.println(s1 == s2);//true
+        System.out.println(s3 == s4);//false
+        System.out.println(s5 == s6);//false
+    }
+~~~
+
+这里同样贴一份我自己的测试代码，使用 new操作符的话，不管在不在-128至127的区间，都是会在堆上产生一个新的对象，返回false；使用自动装箱的话，在区间内的对象都是复用的缓存的对象，返回true；
+
+再贴一份Java中Integer.IntegerCache的源码：
+
+~~~java
+private static class IntegerCache {
+        static final int low = -128;
+        static final int high;
+        static final Integer cache[];
+
+        static {
+            // high value may be configured by property
+            int h = 127;
+            String integerCacheHighPropValue =
+                sun.misc.VM.getSavedProperty("java.lang.Integer.IntegerCache.high");
+            if (integerCacheHighPropValue != null) {
+                try {
+                    int i = parseInt(integerCacheHighPropValue);
+                    i = Math.max(i, 127);
+                    // Maximum array size is Integer.MAX_VALUE
+                    h = Math.min(i, Integer.MAX_VALUE - (-low) -1);
+                } catch( NumberFormatException nfe) {
+                    // If the property cannot be parsed into an int, ignore it.
+                }
+            }
+            high = h;
+
+            cache = new Integer[(high - low) + 1];
+            int j = low;
+            for(int k = 0; k < cache.length; k++)
+                cache[k] = new Integer(j++);
+
+            // range [-128, 127] must be interned (JLS7 5.1.7)
+            assert IntegerCache.high >= 127;
+        }
+
+        private IntegerCache() {}
+    }
+~~~
+
+
+
 
 
 
