--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -214,7 +214,7 @@ public static void main(String[] args) {
     }
 ~~~
 
-这里同样贴一份我自己的测试代码，使用 new操作符的话，不管在不在-128至127的区间，都是会在堆上产生一个新的对象，返回false；使用自动装箱的话，在区间内的对象都是复用的缓存的对象，返回true；
+这里同样贴一份我自己的测试代码，使用 new操作符的话，不管在不在-128至127的区间，都是会在堆上产生一个新的对象，返回false；使用自动装箱的话，其实走的是valueOf()方法，而在valueOf() 方法中用到了缓存IntegerCache，在区间内的对象都是复用的缓存的对象，返回true；
 
 再贴一份Java中Integer.IntegerCache的源码：
 
@@ -251,6 +251,16 @@ private static class IntegerCache {
         }
 
         private IntegerCache() {}
+    }
+~~~
+
+再贴一份Integer.valueOf()的源码：
+
+~~~java
+public static Integer valueOf(int i) {
+        if (i >= IntegerCache.low && i <= IntegerCache.high)
+            return IntegerCache.cache[i + (-IntegerCache.low)];
+        return new Integer(i);
     }
 ~~~
 
