--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -266,6 +266,28 @@ public static Integer valueOf(int i) {
 
 
 
+>14.【推荐】使用索引访问用String的split方法得到的数组时，需做最后一个分隔符后有无内容的检查，否则会有抛IndexOutOfBoundsException的风险。
+>
+>说明：
+>
+>​	String str = "a,b,c,,";
+>
+>​	String[] arr = str.split(",");
+>
+>​	//预期结果大于3，结果是3
+>
+>​	System.out.println(arr.length);//3
+
+这里确实之前没有注意到，如果上面的代码改为：
+
+~~~java
+		String str = "a,b,c, ,";
+		str.split(",");
+		System.out.println(arr.length);//4
+~~~
+
+结果就会变成4了。
+
 
 
 
