--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -288,7 +288,45 @@ System.out.println(arr.length);//4
 
 结果就会变成4了。
 
+>18.【推荐】循环体内，字符串的连接方式，使用StringBuilder的append方法进行扩展。
+>
+>说明：夏利中，反编译出的字节码文件显示每次循环都会new出一个StringBuilder对象，然后进行append操作，最后通过toString方法返回String对象，造成内存资源浪费。
+>
+>反例：
+>
+>​	String str = "start";
+>
+>​	for(int i = 0; i<100; i++){
+>
+>​		str = str + "hello";
+>
+>​	}
 
+这里贴下反编译的字节码文件：
+
+~~~java
+				 0: ldc           #2                  // String start
+         2: astore_1
+         3: iconst_0
+         4: istore_2
+         5: iload_2
+         6: bipush        100
+         8: if_icmpge     37
+        11: new           #3                  // class java/lang/StringBuilder
+        14: dup
+        15: invokespecial #4                  // Method java/lang/StringBuilder."<init>":()V
+        18: aload_1
+        19: invokevirtual #5                  // Method java/lang/StringBuilder.append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
+        22: ldc           #6                  // String hello
+        24: invokevirtual #5                  // Method java/lang/StringBuilder.append:(Ljava/lang/String;)Ljava/lang/StringBuilder;
+        27: invokevirtual #7                  // Method java/lang/StringBuilder.toString:()Ljava/lang/String;
+        30: astore_1
+        31: iinc          2, 1
+        34: goto          5
+        37: return
+~~~
+
+可以看到，每次循环都new了一个StringBuilder对象，这个new StringBuilder的操作是由Java虚拟机的语法糖实现的，不可避免，但是每次循环都生成一个StringBuilder对象就不太好了。
 
 
 
