--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -330,3 +330,21 @@ System.out.println(arr.length);//4
 
 
 
+#### (五)集合处理
+
+>5.【强制】使用工具类Arrays.asList()把数组转换成集合时，不能使用其修改集合相关的方法，它的add/remove/clear方法会抛出UnsupportOperationException异常。
+>
+>说明：asList的返回对象是一个Arrays内部类，并没有实现集合的修改方法。**Arrays.asList体现的是适配器模式，只是转换接口，后台数据仍是数组。**
+>
+>​	String[] str = new String[] {"you", "wu"};
+>
+>​	List list = Arrays.asList(str):
+>
+>第一种情况：list.add("yangguanbao");运行时异常
+>
+>第二种情况：str[0] = "gujin";namelist.get(0)也会随之修改。 
+
+Arrays.asList返回的List不支持我们对其进行结构性的修改，只能进行一些查询|判断|排序的操作。这个也是之前没有注意到的。
+
+如果对这个返回的集合进行结构性修改，就会调用到其父类AbstractList的结构修改方法，而其父类又没有实现这些方法，只是简单的抛出UnsupportOperationException。
+
