--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -348,3 +348,12 @@ Arrays.asList返回的List不支持我们对其进行结构性的修改，只能
 
 如果对这个返回的集合进行结构性修改，就会调用到其父类AbstractList的结构修改方法，而其父类又没有实现这些方法，只是简单的抛出UnsupportOperationException。
 
+
+
+#### (六)并发处理
+
+>3.【强制】线程资源必须通过线程池提供，不允许在应用中自行显示创建线程。
+>
+>说明：使用线程池的好处是**减少在创建和销毁线程上所消耗的时间以及系统资源的开销**，解决资源不足的问题。如果不使用线程池，有可能造成**系统创建大量同类线程而导致消耗完内存或者"过度切换"的问题**。
+
+线程池、数据库连接池应该都有相同的地方，就是避免创建过多的线程|连接资源，减少创建及收回的开销。编程界好多东西的思想都是相通的。
