--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -362,3 +362,74 @@ Arrays.asList返回的List不支持我们对其进行结构性的修改，只能
 
 **TODO 有必要看下druid连接池及ThreadPool的相关源码，查看具体实现。**
 
+>4.【强制】线程池不允许使用Executors去创建，而是通过ThreadPoolExecutor的方式，这样的处理方式让写的同学更加明确线程池的运行规则，避免资源耗尽的风险。
+>
+>说明：Executors返回的线程池对象的弊端如下：
+>
+>1) FixedThreadPool和SingleThreadPool:
+>
+>​	允许的请求队列长度为Integer.MAX_VALUE，可能会堆积大量的请求，从而导致 OOM。
+>
+>2) CachedThreadPool和ScheduledThreadPool:
+>
+>​	允许的创建线程数量为Integer.MAX_VALUE，可能会创建大量的线程，从而导致OOM。
+
+这里贴点源码吧，看看具体：
+
+~~~java
+public static ExecutorService newFixedThreadPool(int nThreads) {
+        return new ThreadPoolExecutor(nThreads, nThreads,
+                                      0L, TimeUnit.MILLISECONDS,
+                                      new LinkedBlockingQueue<Runnable>());
+    }
+
+public LinkedBlockingQueue() {
+        this(Integer.MAX_VALUE);
+    }
+~~~
+
+可以看到Executors.newFixedThreadPool底层使用的workQueue是LinkedBlockingQueue，而默认的LinkedBlockingQueue的容量是Integer.MAX_VALUE，这就导致线程池中线程数量不够处理新到来的请求时会一直往workQueue中堆积，直到OOM。
+
+
+
+~~~java
+public static ExecutorService newSingleThreadExecutor() {
+        return new FinalizableDelegatedExecutorService
+            (new ThreadPoolExecutor(1, 1,
+                                    0L, TimeUnit.MILLISECONDS,
+                                    new LinkedBlockingQueue<Runnable>()));
+    }
+
+public LinkedBlockingQueue() {
+        this(Integer.MAX_VALUE);
+    }
+~~~
+
+可以看到Executors.newSingleThreadExecutor底层使用的workQueue也是LinkedBlockingQueue，默认容量同样是Integer.MAX_VALUE，这就导致线程池中线程数量不够处理新到来的请求时会一直往workQueue中堆积，直到OOM。
+
+
+
+~~~java
+public static ExecutorService newCachedThreadPool() {
+        return new ThreadPoolExecutor(0, Integer.MAX_VALUE,
+                                      60L, TimeUnit.SECONDS,
+                                      new SynchronousQueue<Runnable>());
+    }
+~~~
+
+可以看到Executors.newCachedThreadPool的maximumPoolSize是Integer.MAX_VALUE，这就导致可以一直新建线程来处理新到来的请求，直到OOM。多么吓人。
+
+
+
+~~~java
+public static ScheduledExecutorService newScheduledThreadPool(int corePoolSize) {
+        return new ScheduledThreadPoolExecutor(corePoolSize);
+    }
+
+public ScheduledThreadPoolExecutor(int corePoolSize) {
+        super(corePoolSize, Integer.MAX_VALUE, 0, NANOSECONDS,
+              new DelayedWorkQueue());
+    }
+~~~
+
+可以看到Executors.newScheduledThreadPool调用到ScheduledThreadPoolExecutor，在ScheduledThreadPoolExecutor的构造函数中，传入的maximumPoolSize是Integer.MAX_VALUE，这就导致可以一直新建线程来处理新到来的请求，直到OOM。同样吓人。
