--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -433,3 +433,7 @@ public ScheduledThreadPoolExecutor(int corePoolSize) {
 ~~~
 
 可以看到Executors.newScheduledThreadPool调用到ScheduledThreadPoolExecutor，在ScheduledThreadPoolExecutor的构造函数中，传入的maximumPoolSize是Integer.MAX_VALUE，这就导致可以一直新建线程来处理新到来的请求，直到OOM。同样吓人。
+
+
+
+既然线程数量不可以无限大，同时workQueue容量也不能无限大，以上两者有一个过多都会导致OOM，那是不是说就得设置好RejectedExecutionHandler，来处理无法满足的请求。
