--- a/代码规范/阿里巴巴代码规范阅读记录.md
+++ b/代码规范/阿里巴巴代码规范阅读记录.md
@@ -437,3 +437,8 @@ public ScheduledThreadPoolExecutor(int corePoolSize) {
 
 
 既然线程数量不可以无限大，同时workQueue容量也不能无限大，以上两者有一个过多都会导致OOM，那是不是说就得设置好RejectedExecutionHandler，来处理无法满足的请求。
+
+>6.【强制】高并发时，同步调用应该去考量锁的性能损耗。能用无锁数据结构，就不要用锁；能锁区块，就不要锁整个方法体；能用对象锁，就不要用类锁。
+
+尽量减小锁的粒度。
+
